Update audio visualizer: added mobile responsiveness, improved audio handling with Media Session API, and enhanced UI interactions. Removed unused audio files and added new audio file support.
バックグラウンド再生を実現

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audio Reactive Plane (Three.js)</title>
   <style>
     body { margin: 0; overflow: hidden; background: black; }
@@ -23,7 +24,7 @@
   </style>
 </head>
 <body>
-  <div id="ui">Click anywhere to load & play audio</div>
+  <div id="ui">Click on a plane to select and play audio</div>
   <div id="filename"></div>
   <div id="time"></div>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
